1st adaption to new Debian Bookworm and some adjustments

--- a/smb.conf
+++ b/smb.conf
@@ -7,9 +7,8 @@
 
 [public]
 	path = /srv
-	guest ok = yes
+	guest ok = no
 	writeable = yes
 	browseable = yes
-	create mask = 0666
-	directory mask = 0777
-
+	create mask = 0640
+	directory mask = 0750
